Updated documentation and file organization

--- a/exps/baseline_lr.ipynb
+++ b/exps/baseline_lr.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Project path is /home/daucco/ownCloud-UPM/CBR/medical-cbr\n"
+      "> Project path is /home/daucco/ownCloud-UPM/CBR/llms4mortality\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -157,11 +157,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/daucco/ownCloud-UPM/CBR/medical-cbr/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "/home/daucco/ownCloud-UPM/CBR/llms4mortality/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
-      "/home/daucco/ownCloud-UPM/CBR/medical-cbr/.venv/lib/python3.12/site-packages/sklearn/linear_model/_sag.py:348: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "/home/daucco/ownCloud-UPM/CBR/llms4mortality/.venv/lib/python3.12/site-packages/sklearn/linear_model/_sag.py:348: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n",
-      "/home/daucco/ownCloud-UPM/CBR/medical-cbr/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "/home/daucco/ownCloud-UPM/CBR/llms4mortality/.venv/lib/python3.12/site-packages/sklearn/utils/validation.py:1408: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n"
      ]
     },
@@ -179,7 +179,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/daucco/ownCloud-UPM/CBR/medical-cbr/.venv/lib/python3.12/site-packages/sklearn/linear_model/_sag.py:348: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "/home/daucco/ownCloud-UPM/CBR/llms4mortality/.venv/lib/python3.12/site-packages/sklearn/linear_model/_sag.py:348: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\n"
      ]
     }
@@ -230,82 +230,7 @@
     "                e_count += 1\n",
     "\n",
     "# Export results df to disk\n",
-    "res.to_csv(f'/results/res_lr_embeddings_S{samp_size}{'_balanced' if balanced_data else ''}.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "      <th>tol</th>\n",
-       "      <th>C</th>\n",
-       "      <th>solver</th>\n",
-       "      <th>f1_micro</th>\n",
-       "      <th>f1_macro</th>\n",
-       "      <th>mcc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>nazyrovaclinicalBERT</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>saga</td>\n",
-       "      <td>0.671642</td>\n",
-       "      <td>0.608726</td>\n",
-       "      <td>0.222645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>nazyrovaclinicalBERT</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>saga</td>\n",
-       "      <td>0.668657</td>\n",
-       "      <td>0.608482</td>\n",
-       "      <td>0.220619</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               features     tol     C solver  f1_micro  f1_macro       mcc\n",
-       "0  nazyrovaclinicalBERT  0.0001  20.0   saga  0.671642  0.608726  0.222645\n",
-       "1  nazyrovaclinicalBERT  0.0001  50.0   saga  0.668657  0.608482  0.220619"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
+    "res.to_csv(f'{pjpath}/exps/results/lr_embeddings_S{samp_size}{'_balanced' if balanced_data else ''}.csv', index=False)"
    ]
   }
  ],
