--- a/exps/llms_cot1p1nn.ipynb
+++ b/exps/llms_cot1p1nn.ipynb
@@ -60,21 +60,18 @@
     "SEED = 42\n",
     "\n",
     "# Controls which data to load\n",
-    "samp_size = 20000\n",
+    "samp_size = 5000\n",
     "balanced_data = True\n",
     "\n",
     "#base_model = 'iv_ll3_direct'  # Needs to be available\n",
     "\n",
     "base_models = [\n",
-    "    'iv_ll3_direct',\n",
-    "    'medgenius32b',\n",
-    "    'dsmedical8b',\n",
-    "    'biomistral7b'\n",
+    "    'll3',\n",
     "]\n",
     "\n",
     "# Slice long input: Just keep up to max_words of each text\n",
-    "max_chars = 25000\n",
-    "subsamp_size = 100  # 200, 100 Number of entries to test model with\n",
+    "max_chars = 22000\n",
+    "subsamp_size = 200  # Number of entries to test model with\n",
     "\n",
     "# LLM parameters\n",
     "input_type = 'S'    # (R)eport, (R)eport and (C)hart data as json\n",
@@ -106,7 +103,6 @@
     "}\n",
     "\n",
     "n_ctx = 32   # Context length (x 1024)\n",
-    "m_span = '30days' # How to ask the LLM for mortality (count days vs month)\n",
     "temp = 0.0 # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
     "top_k = 20\n",
     "top_p = 0.5"
@@ -192,7 +188,7 @@
     "        cot1p1_prompt += \"\\nNow decide if the following text report corresponds to a patient who is likely to die within 30 days of medical discharge as per your main instructions, and considering that the previous examples corresponds to two separate medical cases that are clinically similar to the one you have to resolve now:\\n\"\n",
     "        cot1p1_prompt += formatted_input\n",
     "\n",
-    "        model = f'{base_model}_{i_type_id}_{o_type_id}_{m_span}'\n",
+    "        model = f'{base_model}_{i_type_id}_{o_type_id}'\n",
     "        data = {'model': model,  # Explicit model to use\n",
     "            'options': {\n",
     "                'num_ctx': n_ctx * 1024,\n",
@@ -223,7 +219,7 @@
     "\n",
     "    # Export results\n",
     "    df_responses = pd.DataFrame(responses).T\n",
-    "    test_id = f'{base_model}_{i_type_id}_{o_type_id}_{m_span}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
+    "    test_id = f'{base_model}_{i_type_id}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
     "    df_responses.to_csv(f'../results/ex2/{test_id}.csv')\n",
     "    print(f'\\n')"
    ]
