--- a/exps/llms_simple.ipynb
+++ b/exps/llms_simple.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Project path is /home/daucco/ownCloud-UPM/CBR/medical-cbr\n"
+      "> Project path is /home/daucco/ownCloud-UPM/CBR/llms4mortality\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,23 @@
     "SEED = 42\n",
     "\n",
     "# Controls which data to load\n",
-    "samp_size = 20000\n",
+    "samp_size = 5000\n",
     "balanced_data = True\n",
     "\n",
     "base_models = [\n",
-    "    'iv_ll3_direct',\n",
-    "    'medgenius32b',\n",
-    "    'dsmedical8b',\n",
-    "    'biomistral7b'\n",
+    "    'll3',\n",
+    "    #'medgenius32b',\n",
+    "    #'dsmedical8b',\n",
+    "    #'biomistral7b'\n",
     "]\n",
     "\n",
+    "# Just as simple mapping between base mod and summary mod name\n",
+    "summary_mod_map = {\n",
+    "    'iv_ll3_direct': 'll3'\n",
+    "}\n",
+    "\n",
     "# Controls which llm to fire\n",
-    "input_type = ['R', 'RC']    # (R)eport, (R)eport and (C)hart data as json, (S)ummary (this needs to be precomputed!)\n",
+    "input_type = ['S', 'R', 'RC']    # (R)eport, (R)eport and (C)hart data as json, (S)ummary (this needs to be precomputed!)\n",
     "output_type = {     # Maps type of output with the actual format that will be requested in the query\n",
     "    'M': {  # Just mortality      \n",
     "            'type': 'object',\n",
@@ -99,8 +104,40 @@
     "                'PROGNOSIS',\n",
     "                'DIES'\n",
     "            ]\n",
-    "            }\n",
+    "            },\n",
+    "    #       # Extension. Asking for reasoning in pro and against, then for mortality\n",
+    "    #    'RM': {  # Prognosis and mortality      \n",
+    "    #        'type': 'object',\n",
+    "    #        'properties': {\n",
+    "    #            'REASONS LIVES': {\n",
+    "    #                'type': 'string'\n",
+    "    #            },\n",
+    "    #            'REASONS DIES': {\n",
+    "    #                'type': 'string'\n",
+    "    #            },\n",
+    "    #            'DIES': {\n",
+    "    #                'enum': ['YES', 'NO']\n",
+    "    #            }\n",
+    "    #        },\n",
+    "    #        'required': [\n",
+    "    #            'REASONS LIVES',\n",
+    "    #            'REASONS DIES',\n",
+    "    #            'DIES'\n",
+    "    #        ]\n",
+    "    #        }\n",
     "    }\n",
+    "\n",
+    "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
+    "#patient_data_columns = [\n",
+    "#    'age',\n",
+    "#    'gender',\n",
+    "#    'diagnose_group_mortality',\n",
+    "#    'diagnose_group_description',\n",
+    "#    'race',\n",
+    "#    'insurance',\n",
+    "#    'marital_status',\n",
+    "#    #'admission_type',\n",
+    "#    ]\n",
     "\n",
     "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
     "# Remapping some column names to make them more significant in the prompt\n",
@@ -115,8 +152,7 @@
     "    #'text': 'REPORT'\n",
     "}\n",
     "\n",
-    "num_ctx = [16]   # Context length (x 1024)\n",
-    "mortality_span = ['30days'] # 30days, amonth How to ask the LLM for mortality (count days vs month)\n",
+    "num_ctx = [32]   # Context length (x 1024)\n",
     "temps = [0.1] #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
     "\n",
     "\n",
@@ -126,7 +162,7 @@
     "\n",
     "# Slice long input: Just keep up to max_words of each text\n",
     "max_chars = 22000\n",
-    "subsamp_size = 100  # 100 Number of entries to test model with. This number will be used to load summaries from disks\n",
+    "subsamp_size = 200  # Number of entries to test model with. This number will be used to load summaries from disks\n",
     "\n",
     "# NOTE use this only to limit the number of entries to process in the experiment\n",
     "#   Smaller than subsamo_size\n",
@@ -134,13 +170,14 @@
     "\n",
     "# If set, attempts to load note summaries from disk and use those instead of the raw reports.\n",
     "summaries_dir = f'{mimicpath}/summaries/'\n",
+    "#summaries_path = f'{mimicpath}/summaries/summary_{max_chars}mc_ss{subsamp_size}.csv'\n",
     "\n",
     "prepend_columns = ['age', 'gender', 'insurance', 'marital_status', 'race']   # Columns in base dataframe to prepend to text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +197,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Subsampling test data to 200...\n",
+      "(200, 19)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>note_id</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>charttime</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>dod</th>\n",
+       "      <th>anchor_age</th>\n",
+       "      <th>anchor_year</th>\n",
+       "      <th>admittime</th>\n",
+       "      <th>admission_type</th>\n",
+       "      <th>insurance</th>\n",
+       "      <th>marital_status</th>\n",
+       "      <th>race</th>\n",
+       "      <th>diagnose_group_description</th>\n",
+       "      <th>drg_mortality</th>\n",
+       "      <th>diagnose_group_mortality</th>\n",
+       "      <th>drg_code</th>\n",
+       "      <th>age</th>\n",
+       "      <th>delta_days_dod</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21647706</th>\n",
+       "      <td>17450544-DS-18</td>\n",
+       "      <td>17450544</td>\n",
+       "      <td>2161-05-11</td>\n",
+       "      <td>\\nName:  ___                  Unit No:   ___\\...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2161-05-13</td>\n",
+       "      <td>76</td>\n",
+       "      <td>2161</td>\n",
+       "      <td>2161-05-07</td>\n",
+       "      <td>EW EMER.</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>WIDOWED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>INTESTINAL OBSTRUCTION, G.I. OBSTRUCTION W CC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>[247, 389]</td>\n",
+       "      <td>76</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25789302</th>\n",
+       "      <td>16492756-DS-19</td>\n",
+       "      <td>16492756</td>\n",
+       "      <td>2186-02-12</td>\n",
+       "      <td>\\nName:  ___                 Unit No:   ___\\n...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2186-05-21</td>\n",
+       "      <td>69</td>\n",
+       "      <td>2185</td>\n",
+       "      <td>2186-01-20</td>\n",
+       "      <td>DIRECT EMER.</td>\n",
+       "      <td>Medicare</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>SEPTICEMIA &amp; DISSEMINATED INFECTIONS, SEPTICEM...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MODERATE</td>\n",
+       "      <td>[720, 871]</td>\n",
+       "      <td>70</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29954698</th>\n",
+       "      <td>11324139-DS-25</td>\n",
+       "      <td>11324139</td>\n",
+       "      <td>2191-12-07</td>\n",
+       "      <td>\\nName:  ___                 Unit No:   ___\\n...</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2192-01-20</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2182</td>\n",
+       "      <td>2191-11-28</td>\n",
+       "      <td>OBSERVATION ADMIT</td>\n",
+       "      <td>Medicare</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>ACUTE KIDNEY INJURY, RENAL FAILURE W CC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>[469, 683]</td>\n",
+       "      <td>69</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21699201</th>\n",
+       "      <td>18218643-DS-15</td>\n",
+       "      <td>18218643</td>\n",
+       "      <td>2158-06-27</td>\n",
+       "      <td>\\nName:  ___               Unit No:   ___\\n \\...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2158</td>\n",
+       "      <td>2158-06-24</td>\n",
+       "      <td>ELECTIVE</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>SINGLE</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>DEPRESSION EXCEPT MAJOR DEPRESSIVE DISORDER, D...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>[754, 881]</td>\n",
+       "      <td>18</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28251820</th>\n",
+       "      <td>13387877-DS-19</td>\n",
+       "      <td>13387877</td>\n",
+       "      <td>2152-05-26</td>\n",
+       "      <td>\\nName:  ___                    Unit No:   __...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2152-06-07</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2151</td>\n",
+       "      <td>2152-05-24</td>\n",
+       "      <td>DIRECT EMER.</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE - OTHER EUROPEAN</td>\n",
+       "      <td>OTHER RESPIRATORY DIAGNOSES EXCEPT SIGNS, SYMP...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>MODERATE</td>\n",
+       "      <td>[143, 189]</td>\n",
+       "      <td>61</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 note_id  subject_id   charttime  \\\n",
+       "hadm_id                                            \n",
+       "21647706  17450544-DS-18    17450544  2161-05-11   \n",
+       "25789302  16492756-DS-19    16492756  2186-02-12   \n",
+       "29954698  11324139-DS-25    11324139  2191-12-07   \n",
+       "21699201  18218643-DS-15    18218643  2158-06-27   \n",
+       "28251820  13387877-DS-19    13387877  2152-05-26   \n",
+       "\n",
+       "                                                       text gender  \\\n",
+       "hadm_id                                                              \n",
+       "21647706   \\nName:  ___                  Unit No:   ___\\...      M   \n",
+       "25789302   \\nName:  ___                 Unit No:   ___\\n...      M   \n",
+       "29954698   \\nName:  ___                 Unit No:   ___\\n...      F   \n",
+       "21699201   \\nName:  ___               Unit No:   ___\\n \\...      M   \n",
+       "28251820   \\nName:  ___                    Unit No:   __...      M   \n",
+       "\n",
+       "                 dod  anchor_age  anchor_year   admittime     admission_type  \\\n",
+       "hadm_id                                                                        \n",
+       "21647706  2161-05-13          76         2161  2161-05-07           EW EMER.   \n",
+       "25789302  2186-05-21          69         2185  2186-01-20       DIRECT EMER.   \n",
+       "29954698  2192-01-20          60         2182  2191-11-28  OBSERVATION ADMIT   \n",
+       "21699201         NaN          18         2158  2158-06-24           ELECTIVE   \n",
+       "28251820  2152-06-07          60         2151  2152-05-24       DIRECT EMER.   \n",
+       "\n",
+       "         insurance marital_status                    race  \\\n",
+       "hadm_id                                                     \n",
+       "21647706     Other        WIDOWED                   WHITE   \n",
+       "25789302  Medicare        MARRIED                   WHITE   \n",
+       "29954698  Medicare        MARRIED                   WHITE   \n",
+       "21699201     Other         SINGLE                   WHITE   \n",
+       "28251820     Other        MARRIED  WHITE - OTHER EUROPEAN   \n",
+       "\n",
+       "                                 diagnose_group_description  drg_mortality  \\\n",
+       "hadm_id                                                                      \n",
+       "21647706      INTESTINAL OBSTRUCTION, G.I. OBSTRUCTION W CC              3   \n",
+       "25789302  SEPTICEMIA & DISSEMINATED INFECTIONS, SEPTICEM...              2   \n",
+       "29954698            ACUTE KIDNEY INJURY, RENAL FAILURE W CC              3   \n",
+       "21699201  DEPRESSION EXCEPT MAJOR DEPRESSIVE DISORDER, D...              1   \n",
+       "28251820  OTHER RESPIRATORY DIAGNOSES EXCEPT SIGNS, SYMP...              2   \n",
+       "\n",
+       "         diagnose_group_mortality    drg_code  age  delta_days_dod  \n",
+       "hadm_id                                                             \n",
+       "21647706                     HIGH  [247, 389]   76            True  \n",
+       "25789302                 MODERATE  [720, 871]   70           False  \n",
+       "29954698                     HIGH  [469, 683]   69           False  \n",
+       "21699201                      LOW  [754, 881]   18           False  \n",
+       "28251820                 MODERATE  [143, 189]   61            True  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Loads test split\n",
     "df_test = df.set_index('hadm_id').loc[splits_hadmids['test']]\n",
@@ -171,7 +450,7 @@
     "if subsamp_size:\n",
     "    print(f'> Subsampling test data to {subsamp_size}...')\n",
     "    df_test = df_test.sample(subsamp_size, random_state=SEED)\n",
-    "    \n",
+    "\n",
     "# Middle-truncates long texts...\n",
     "df_test['text'] = df_test['text'].apply(lambda x: x[:(max_chars//2)] + x[-(max_chars//2):] if len(x) > max_chars else x)\n",
     "\n",
@@ -204,6 +483,8 @@
     "for base_model in base_models:\n",
     "    print(f'> [BASE MODEL]: {base_model}')\n",
     "\n",
+    "    summary_mod = base_model\n",
+    "\n",
     "    for i_type in input_type:\n",
     "\n",
     "        i_type_id = i_type\n",
@@ -219,8 +500,12 @@
     "            # NOTE: Assumes summary has already been loaded in text column\n",
     "            \n",
     "            ## Load summary\n",
-    "            summaries_path = f'{mimicpath}/summaries/summary_{max_chars}mc_ss{subsamp_size}.csv'\n",
+    "            # TODO: Use proper one...\n",
+    "            #summaries_path = f'{mimicpath}/summaries/summary_{max_chars}mc_ss{subsamp_size}.csv'\n",
+    "            summaries_path = f'{mimicpath}/summary_S{samp_size}_{'balanced' if balanced_data else ''}_{summary_mod}_mc{max_chars}.csv'\n",
     "\n",
+    "            #summaries_path = f'{mimicpath}/summaries/summary_{base_model}_{max_chars}mc_ss{subsamp_size}.csv'\n",
+    "            \n",
     "            df_summaries = pd.read_csv(summaries_path, index_col=0)\n",
     "\n",
     "            missing_summaries = set(df_test.index) - set(df_test.index)\n",
@@ -253,16 +538,17 @@
     "        print(f'> [INPUT_TYPE]: {i_type_id}')\n",
     "\n",
     "        for o_type_id, o_type_format in output_type.items():\n",
-    "            for n_ctx, m_span, temp in product(num_ctx, mortality_span, temps):\n",
+    "            for n_ctx, temp in product(num_ctx, temps):\n",
     "\n",
     "                # NOTE: Input type R and S use the same base model:\n",
     "                i_type_id_model = i_type_id\n",
+    "                #i_type_id_model = 'R' if i_type_id_model == 'S' else i_type_id_model\n",
     "\n",
     "                # Resolves model\n",
     "                # # Models need to exists in the online instance!\n",
-    "                model = f'{base_model}_{i_type_id_model}_{o_type_id}_{m_span}'\n",
+    "                model = f'{base_model}_{i_type_id_model}_{o_type_id}'\n",
     "\n",
-    "                print(f'> [OUTPUT_TYPE]: {o_type_id}, ({n_ctx} ctx, {m_span} span, {temp} temp)')\n",
+    "                print(f'> [OUTPUT_TYPE]: {o_type_id}, ({n_ctx} ctx, {temp} temp)')\n",
     "\n",
     "                responses = {}\n",
     "                i=1\n",
@@ -272,6 +558,12 @@
     "\n",
     "                    #patient_input = json.dumps({row.name: row['input_query'][:20000]})\n",
     "                    fromatted_input = row['input_query']\n",
+    "\n",
+    "                    #print(fromatted_input)\n",
+    "                    #print('...')\n",
+    "                    #print(json.loads(fromatted_input))\n",
+    "                    #print(type(json.loads(fromatted_input)))\n",
+    "                    #print(json.loads(fromatted_input).keys())\n",
     "\n",
     "                    data = {'model': model,  # Explicit model to use\n",
     "                            #'options': {'num_ctx': n_ctx * 1024, 'temperature': temp},\n",
@@ -304,9 +596,10 @@
     "                    i+=1\n",
     "\n",
     "                # Export results\n",
+    "                # TODO: Save online\n",
     "                df_responses = pd.DataFrame(responses).T\n",
-    "                test_id = f'{base_model}_{i_type_id}_{o_type_id}_{m_span}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
-    "                df_responses.to_csv(f'results/ex1/{test_id}.csv')\n",
+    "                test_id = f'{base_model}_{i_type_id}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
+    "                df_responses.to_csv(f'{pjpath}/exps/results/llms/simple/{test_id}.csv')\n",
     "                tests[test_id] = df_responses\n",
     "                print(f'\\n')"
    ]
