--- a/tools/embeddings_sbert.ipynb
+++ b/tools/embeddings_sbert.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/daucco/.conda/envs/dev-gsicbr/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/daucco/ownCloud-UPM/CBR/llms4mortality/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Project path is /home/daucco/ownCloud/unsync/_entregabledata/llms4mortality\n"
+      "> Project path is /home/daucco/ownCloud-UPM/CBR/llms4mortality\n"
      ]
     }
    ],
@@ -87,10 +87,9 @@
     "    #('emilyalsentzer/Bio_Discharge_Summary_BERT', 256, 'right'),\n",
     "    #('all-distilroberta-v1', 256, 'right'),\n",
     "    #('medicalai/ClinicalBERT', 256, 'right'),\n",
-    "    ('nazyrova/clinicalBERT', 256, 'right') # Found best\n",
+    "    ('nazyrova/clinicalBERT', 256, 'middle') # Found best\n",
     "]\n",
     "\n",
-    "truncation_side = 'middle'  #   left, right, middle. Where to apply truncation when encoding. If middle, applies left & right and concatenates results (2 passes)\n",
     "prepend_columns = ['age', 'gender', 'insurance', 'marital_status', 'race', 'diagnose_group_description', 'diagnose_group_mortality']   # Columns in base dataframe to prepend to text"
    ]
   },
@@ -244,7 +243,7 @@
     "if summaries:\n",
     "    print(f'> (!) Using summaries')\n",
     "    # Use precomputed summaries instead of text. Load them from disk\n",
-    "    df_summ = pd.read_csv(mimicpath / f'summaries/{summary_id}.csv', index_col=0)\n",
+    "    df_summ = pd.read_csv(mimicpath / f'{summary_id}.csv', index_col=0)\n",
     "    df_summ.index.rename('hadm_id', inplace=True)\n",
     "    df = pd.merge(df, df_summ, on='hadm_id', how='inner')\n",
     "    df['text'] = df.apply(lambda x: x['SUMMARY'], axis=1)\n",
@@ -257,9 +256,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Processing model 1/1 - (nazyrova/clinicalBERT)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No sentence-transformers model found with name nazyrova/clinicalBERT. Creating a new one with mean pooling.\n",
+      "Some weights of BertModel were not initialized from the model checkpoint at nazyrova/clinicalBERT and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Batches: 100%|██████████| 20/20 [01:31<00:00,  4.58s/it]\n",
+      "No sentence-transformers model found with name nazyrova/clinicalBERT. Creating a new one with mean pooling.\n",
+      "Some weights of BertModel were not initialized from the model checkpoint at nazyrova/clinicalBERT and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Batches: 100%|██████████| 20/20 [01:29<00:00,  4.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Exporting resulting embeddings to /home/daucco/ownCloud-UPM/CBR/llms4mortality/data/mimiciv...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Getes sentence embeddings for each model\n",
     "encoder_kwargs = {\n",
@@ -299,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev-gsicbr",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
