--- a/tools/mimiciv_prepro.ipynb
+++ b/tools/mimiciv_prepro.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import json\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -44,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Project path is /home/daucco/ownCloud/unsync/_entregabledata/llms4mortality\n"
+      "> Project path is /home/daucco/ownCloud-UPM/CBR/llms4mortality\n"
      ]
     }
    ],
@@ -88,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22751/1364889006.py:31: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_8257/1364889006.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -164,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_22751/1134108820.py:20: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "/tmp/ipykernel_8257/4213372719.py:20: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
       "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
       "A typical example is when you are setting values in a column of a DataFrame, like:\n",
       "\n",
@@ -175,7 +177,7 @@
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
       "  df['delta_days_dod'].loc[hadm_ids_dead] = df.loc[hadm_ids_dead].apply(lambda e: int((e['dod'] - e['charttime']).days), axis=1)\n",
-      "/tmp/ipykernel_22751/1134108820.py:20: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_8257/4213372719.py:20: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -265,12 +267,43 @@
     "numeric_columns = ['age', 'drg_mortality']\n",
     "df = df.astype({cname: int for cname in numeric_columns})\n",
     "\n",
+    "# Take a sample\n",
+    "df_samp = df.sample(samp_size, random_state=SEED)\n",
+    "\n",
     "print('done')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We also get dummies from categorical data. This will later be useful to assess similarity out of these values\n",
+    "categorical_columns = ['gender', 'admission_type', 'insurance', 'marital_status', 'race']\n",
+    "\n",
+    "df_dummies = df_samp.copy()\n",
+    "for category in categorical_columns:\n",
+    "    df_dummies = pd.get_dummies(df_dummies, prefix=category, prefix_sep='_', columns=[category])\n",
+    "\n",
+    "# Special treatment for drg_codes\n",
+    "# First we evaluate data, as it was reimported as strings instead of lists\n",
+    "df_drg = df_dummies.set_index('hadm_id')['drg_code'].to_frame()\n",
+    "\n",
+    "# Then we explode values\n",
+    "df_drg = df_drg.explode('drg_code')\n",
+    "\n",
+    "# Aggregate categoricals into a single row per hadm_id (index)\n",
+    "df_drg = pd.get_dummies(df_drg, prefix='drg_code', prefix_sep='_', columns=['drg_code']).groupby('hadm_id').sum()\n",
+    "\n",
+    "# Drop original drg_code from df and merge with drg_code\n",
+    "df_dummies = df_dummies.drop(columns=['drg_code'])\n",
+    "df_dummies = pd.merge(df_dummies, df_drg, on='hadm_id', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +316,15 @@
       "       'insurance', 'marital_status', 'race', 'diagnose_group_description',\n",
       "       'drg_mortality', 'diagnose_group_mortality', 'drg_code', 'age',\n",
       "       'delta_days_dod'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "(5000, 727)\n",
+      "Index(['hadm_id', 'note_id', 'subject_id', 'charttime', 'text', 'dod',\n",
+      "       'anchor_age', 'anchor_year', 'admittime', 'diagnose_group_description',\n",
+      "       ...\n",
+      "       'drg_code_974', 'drg_code_975', 'drg_code_976', 'drg_code_977',\n",
+      "       'drg_code_981', 'drg_code_982', 'drg_code_983', 'drg_code_987',\n",
+      "       'drg_code_988', 'drg_code_989'],\n",
+      "      dtype='object', length=727)\n"
      ]
     },
     {
@@ -486,7 +527,7 @@
        "4              1                      LOW  [753, 885]   37              -1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,17 +535,9 @@
    "source": [
     "print(df.shape)\n",
     "print(df.columns)\n",
+    "print(df_dummies.shape)\n",
+    "print(df_dummies.columns)\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Take a sample\n",
-    "df_samp = df.sample(samp_size, random_state=SEED)"
    ]
   },
   {
@@ -516,9 +549,6 @@
     "# Split and export\n",
     "\n",
     "df_id = f'mimiciv_4_mortality_S{samp_size}{'_balanced' if balanced_data else ''}'\n",
-    "\n",
-    "import json\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split by subject to avoid leakage\n",
     "subj_cb_train, subj_test_val = train_test_split(df_samp['subject_id'].unique(), train_size=(split_ratios['cb'] + split_ratios['train']), random_state=SEED)\n",
@@ -532,8 +562,10 @@
     "for sname, ssubj_idx in zip(('cb', 'train', 'test', 'val'), (subj_cb, subj_train, subj_test, subj_val)):\n",
     "    splits_hadmids[sname] = df_samp[df_samp['subject_id'].isin(ssubj_idx)]['hadm_id'].to_list()\n",
     "\n",
-    "# Export full sampled df and split hadm_ids to disk\n",
+    "# Export full sampled dataframes and split info to disk\n",
     "df_samp.to_csv(mimicpath / f'{df_id}.csv.gz', index=False)\n",
+    "df_dummies.to_csv(mimicpath / f'd_{df_id}.csv.gz', index=False)\n",
+    "\n",
     "with open(mimicpath / f'hadmid_splits_S{samp_size}{'_balanced' if balanced_data else ''}.json', 'w') as ofile:\n",
     "    json.dump(splits_hadmids, ofile)\n",
     "\n",
@@ -545,7 +577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev-gsicbr",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -559,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
